--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 langchain>=0.2.0
-langchain-community>=0.0.35
+langchain-community>=0.2
 sentence-transformers>=2.6.1
 faiss-cpu>=1.8.0
 streamlit>=1.35.0
@@ -8,3 +8,4 @@ accelerate>=0.31.0
 protobuf<4.0.0      
 pypdf
 python-dotenv
+llama-cpp-python==0.2.78
